--- a/blocklet.yml
+++ b/blocklet.yml
@@ -4,7 +4,7 @@ title: Remix Blocklet
 description: Demo blocklet with Remix
 version: 1.0.0
 group: dapp
-main: server.js
+main: index.js
 author:
   name: wangshijun
 specVersion: 1.2.8
@@ -12,7 +12,7 @@ files:
   - blocklet.md
   - screenshots
   - build
-  - public
+  - index.js
 interfaces:
   - type: web
     name: publicUrl
